--- a/src/main/resources/templates/demo2.html
+++ b/src/main/resources/templates/demo2.html
@@ -24,6 +24,8 @@
 <body>
 第一个名称：<input type="text" name="fname" value="唐帅哥">
 最后一个名称：<input id="ip1" type="text" name="lname" value="靓仔">
+
+测试一下回滚
 <button>返回第一个输入字段的值</button>
 <button id="btn1">根据name筛选唐帅哥</button>
 </body>
